force-app/main/default/objects/Data_Translation__c/Data_Translation__c.object-meta.xml
<CustomObject>
    <label>Data Translation</label>
    <nameField>
        <displayFormat>DT-{00000000}</displayFormat>
        <label>Translation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>