force-app/main/default/objects/Data_Translation__c/fields/TranslationISOCode__c.field-meta.xml
<CustomField>
    <fullName>TranslationISOCode__c</fullName>
    <label>Translation LanguageCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Languages</valueSetName>
    </valueSet>
</CustomField>