force-app/main/default/objects/Data_Translation__c/fields/TranslationKey__c.field-meta.xml
<CustomField>
    <fullName>TranslationKey__c</fullName>
    <label>Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>