force-app/main/default/objects/Data_Translation__c/fields/TranslationValue__c.field-meta.xml
<CustomField>
    <fullName>TranslationValue__c</fullName>
    <label>Translation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>